# image-processing-function-app

./: .pre-commit-config.yaml  Dockerfile  README.md  host.json  pyproject.toml
.github/workflows/: publish.yml  test-and-build.yml
src/image_processing_function_app/: exceptions.py  metadata.py  multiparts.py  processing.py
src/image_processing_function_app/connectors/: azurestorage.py
tests/: conftest.py
tests/function_app/: test_main.py
tests/image_processing_function_app/: test_metadata.py  test_processing.py
tests/image_processing_function_app/connectors/: test_azurestorage.py
v1/: __init__.py  function.json
